--- a/bootStrapLandingPage/index.html
+++ b/bootStrapLandingPage/index.html
@@ -50,26 +50,73 @@
             width: 100%;
            background: #212529 !important;
         }
+        .btn-purchase-style {
+            padding: .5rem 1rem;
+            border: none;
+            border-radius: .3rem;
+            font-size: .8rem;
+            font-weight: 500;
+            color: #fff;
+            background-color: #02B875;
+        }
+        .main-section {
+            width: 100%;
+            background: linear-gradient(135deg, #6f42c1 0%, #4582EC 100%);
+        }
+        .card-img-top {
+            width: 100%;
+            padding: 5rem;
+        }
+        .center-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .title-description{
+            display: flex;
+            flex-direction: column;
+            padding: 2rem;
+        }
+        .title-description h2{
+            font-size: 2.6rem;
+            color: white;
+        } 
     </style>
 </head>
 
 <body>
     <header class="menu">
-        <div class="container">
-        <nav>
-            <ul class="menu-list">
-                <li><a href=""><img src="https://wingman.mediumra.re/assets/img/logo-white.svg" alt=""></a></li>
-                <li><a>Overview</a></li>
-                <li><a>Pages</a></li>
-                <li><a>Components</a></li>
-            </ul>
-            <ul class="menu-list2">
-                <li><a>Docs</a></li>
-                <li><a>Changelog</a></li>
-                <li><button>Purchase Now</button></li>
-            </ul>
-        </nav>
-    </div>
+        <div class="container center-content">
+            <nav>
+                <ul class="menu-list">
+                    <li><a href=""><img src="https://wingman.mediumra.re/assets/img/logo-white.svg" alt=""></a></li>
+                    <li><a>Overview</a></li>
+                    <li><a>Pages</a></li>
+                    <li><a>Components</a></li>
+                </ul>
+                <ul class="menu-list2">
+                    <li><a>Docs</a></li>
+                    <li><a>Changelog</a></li>
+                    <li><button class="btn-purchase-style">Purchase Now</button></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    <section class="main-section">
+        <div class="container center-content">
+            <div class="title-description">
+                <h2>Build stunning websites and apps</h2>
+                <p>Meet Wingman, a robust suite of styled pages and components, powered by Bootstrap 4. 
+                The ideal starting point for product landing pages, stylish web-apps and complete company websites.</p>
+                <div>
+                    <button class="btn-purchase-style">Purchase Now</button>
+                    <a>Start exploring<i></i></a>
+                </div>               
+            </div>
+            <div class="carrossel-page">
+                <img class="card-img-top" src="https://wingman.mediumra.re/assets/img/overview/app-project-detail-hero.jpg" alt="Project - Detail">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
